# rust_cc_proxy

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  README.zh-CN.md  install.ps1  install.sh  start-proxy.ps1
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
headroom-ffi/: Cargo.toml
headroom-ffi/src/: lib.rs
src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  metrics.rs
src/compress/: adaptive_sizer.rs  anchor_selector.rs  cache_aware.rs  ccr.rs  diff.rs  headroom_dll.rs  live_zone.rs  log.rs  mod.rs  pipeline_stage.rs  pipeline_utils.rs  relevance.rs  search.rs  signals.rs  text.rs  tokenizer.rs
src/compress/ccr/: memory.rs  mod.rs  sqlite.rs
src/monitor/: mod.rs
src/pipeline/: mod.rs  system_normalizer.rs
src/protocol/: messages.rs  mod.rs  models.rs  sse_types.rs
src/providers/: anthropic.rs  deepseek.rs  mod.rs
src/proxy/: mod.rs  streaming.rs
src/server/: handlers.rs  mod.rs  rate_limiter.rs  shutdown.rs
tests/: integration.rs
