[workspace]
resolver = "2"
members = ["headroom-ffi"]

[package]
name = "rust_cc_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
reqwest = { version = "0.12", features = ["stream", "json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
blake3 = "1"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
bytes = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tiktoken-rs = "0.6"
lru = "0.12"
prometheus = "0.13"

[target.'cfg(not(windows))'.dependencies]
libc = "0.2"
